# readability

./: .gitignore  Cargo.toml  README.md
examples/: scraper.rs
src/: dom.rs  extractor.rs  lib.rs  scorer.rs
tests/: lib.rs
