[package]
name = "readability"
version = "0.1.4"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/kumabook/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []
edition = "2018"

[dependencies]
regex            = "1"
url              = "2.1.0"
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
lazy_static      = "1.4.0"

[dependencies.reqwest]
version = "0.9"
optional = true

[features]
default = ["reqwest"]
